<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="DUT_RECIPEOFFER" Id="{daeb7bf0-ca75-45a6-98a6-391de0c564b1}">
    <Declaration><![CDATA[TYPE DUT_RECIPEOFFER :
STRUCT
	Dummy: BOOL := TRUE;
	Name: STRING(80) := 'e.g. Product x';
	RecipeID: INT;
	Description: STRING(255) := '%Description of the Recipe e.g. "a recipe, that produces a product with feature x"';
	UserParameter: ARRAY[0..UserParameterCnt] OF DUT_RECIPE_USERPARAMETEROUTPUT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>